--- a/resource/css/styles.css
+++ b/resource/css/styles.css
@@ -163,3 +163,37 @@ body {
     left: auto !important;
 }
 
+/* Estilos para el contenedor de reservas */
+.reservas-content {
+    display: none; /* Por defecto, ocultamos el contenedor */
+    position: relative; /* Cambiar a posición relativa */
+    top: 50%; /* Lo centramos verticalmente */
+    left: 50%; /* Lo centramos horizontalmente */
+    transform: translate(-50%, -50%); /* Lo centramos exactamente */
+    z-index: 999; /* Aseguramos que esté por encima de otros elementos */
+    width: 80%; /* Ancho del contenedor */
+    max-width: 800px; /* Ancho máximo del contenedor */
+    background-color: white; /* Color de fondo */
+    padding: 20px; /* Espaciado interno */
+    border: 1px solid #ccc; /* Borde */
+    border-radius: 5px; /* Bordes redondeados */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra */
+}
+
+
+/* Estilos para la tarjeta */
+.card-reservas {
+    margin-bottom: 0; /* Eliminamos el margen inferior */
+    border-radius: 5px; /* Bordes redondeados */
+    border: none; /* Sin borde */
+    box-shadow: none; /* Sin sombra */
+}
+
+/* Estilos para el encabezado de la tarjeta */
+.card-header {
+    background-color: #f8f9fa; /* Color de fondo */
+    border-bottom: 1px solid #dee2e6; /* Borde inferior */
+    border-radius: 5px 5px 0 0; /* Bordes redondeados solo arriba */
+    padding: 10px 20px; /* Espaciado interno */
+    font-weight: bold; /* Negrita */
+}
